add vite plugin

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
 		"@sveltejs/kit": "^2.16.1",
 		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@tailwindcss/postcss": "^4.0.0",
+		"@tailwindcss/vite": "^4.0.6",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.6",
 		"@types/dom-view-transitions": "^1.0.5",
