add txt path to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@ in/
 # files created by docker buildx
 out/
 
+# files created by e2e environment
+snapshot-status-macos/
+snapshot-status-ubuntu/
+
 # frontend code
 node_modules/
 build/
