--- a/.github/actions/create-pr/action.yml
+++ b/.github/actions/create-pr/action.yml
@@ -15,6 +15,9 @@ inputs:
   branch:
     description: 'Branch name for the PR'
     required: true
+  path:
+    description: 'Path of the changes to be staged'
+    required: true
 
 runs:
   using: 'composite'
@@ -28,6 +31,7 @@ runs:
         committer: GitHub <noreply@github.com>
         author: gix-bot <gix-bot@users.noreply.github.com>
         branch: ${{ inputs.branch }}
+        path: ${{ inputs.path }}
         delete-branch: true
         title: ${{ inputs.title }}
         body: ${{ inputs.body }}
