--- a/.github/workflows/update-snapshots.yml
+++ b/.github/workflows/update-snapshots.yml
@@ -231,10 +231,6 @@ jobs:
           default_author: github_actions
           message: '🤖 Update E2E snapshots'
 
-      - name: Stage Changes on main
-        if: env.FINAL_CHANGES == 'true' && github.ref == 'refs/heads/main'
-        run: git add e2e
-
       - name: Set CHANGES_DETECTED env var
         if: env.FINAL_CHANGES == 'true' && github.ref == 'refs/heads/main'
         run: |
@@ -250,6 +246,7 @@ jobs:
         with:
           token: ${{ steps.app-token.outputs.token }}
           branch: bot-e2e-update-snapshots
+          path: e2e/
           title: 'chore(e2e): Update Playwright E2E Snapshots'
           body: |
             The following E2E snapshots have been updated:
