fixed path usage

--- a/.github/actions/create-pr/action.yml
+++ b/.github/actions/create-pr/action.yml
@@ -17,7 +17,7 @@ inputs:
     required: true
   path:
     description: 'Path of the changes to be staged'
-    required: true
+    required: false
 
 runs:
   using: 'composite'
