--- a/.github/workflows/update-snapshots.yml
+++ b/.github/workflows/update-snapshots.yml
@@ -246,7 +246,8 @@ jobs:
         with:
           token: ${{ steps.app-token.outputs.token }}
           branch: bot-e2e-update-snapshots
-          path: e2e/
+          add-paths: |
+            e2e/
           title: 'chore(e2e): Update Playwright E2E Snapshots'
           body: |
             The following E2E snapshots have been updated:
