--- a/.github/workflows/update-tokens.yml
+++ b/.github/workflows/update-tokens.yml
@@ -56,6 +56,9 @@ jobs:
       - name: Update
         run: npm run build:tokens-ckerc20
 
+      - name: Stage Changes
+        run: git add .
+
       - name: Check for Changes
         run: |
           if ! git diff --cached --quiet; then
