--- a/.github/actions/create-pr/action.yml
+++ b/.github/actions/create-pr/action.yml
@@ -31,7 +31,7 @@ runs:
         committer: GitHub <noreply@github.com>
         author: gix-bot <gix-bot@users.noreply.github.com>
         branch: ${{ inputs.branch }}
-        add-paths: ${{ inputs.path }}
+        add-paths: ${{ inputs.paths }}
         delete-branch: true
         title: ${{ inputs.title }}
         body: ${{ inputs.body }}
