--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"cargo:test": "./scripts/test.backend.sh",
 		"clippy": "./scripts/lint.rust.sh",
 		"lint": "prettier --check './**/*.{ts,js,mjs,json,scss,css,svelte,html,md}' && eslint .",
+		"eslint": "eslint .",
 		"format-imports": "eslint --fix --rule 'import/no-duplicates: [error, { prefer-inline: true }]' ./src/**/*.svelte",
 		"format": "prettier --write './**/*.{ts,js,mjs,json,scss,css,svelte,html,md,yml}' && npm run format-imports",
 		"format:backend": "./scripts/format.sh",
@@ -88,7 +89,7 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@dfinity/eslint-config-oisy-wallet": "^0.0.6",
+		"@dfinity/eslint-config-oisy-wallet": "file:dfinity-eslint-config-oisy-wallet-0.0.6.tgz",
 		"@dfinity/ic-management": "^6.0.4-next-2025-02-10",
 		"@dfinity/identity-secp256k1": "^2.3.0",
 		"@dfinity/internet-identity-playwright": "^0.0.4",
