feat(ci): run frontend reproducibility in each PR

--- a/.github/workflows/frontend-reproducibility.yaml
+++ b/.github/workflows/frontend-reproducibility.yaml
@@ -1,6 +1,11 @@
 name: Frontend Reproducibility
 
 on:
+  push:
+    branches:
+      - main
+  pull_request:
+  merge_group:
   release:
     types: [released]
   workflow_dispatch:
