--- a/.github/workflows/frontend-reproducibility.yaml
+++ b/.github/workflows/frontend-reproducibility.yaml
@@ -12,6 +12,12 @@ jobs:
 
     steps:
       - name: Checkout for pull request
+        if: ${{ github.event_name != 'pull_request' }}
+        uses: actions/checkout@v4
+       
+
+
+      - name: Checkout for pull request
         if: ${{ github.event_name == 'pull_request' }}
         uses: actions/checkout@v4
         with:
