--- a/.github/workflows/frontend-reproducibility.yaml
+++ b/.github/workflows/frontend-reproducibility.yaml
@@ -5,6 +5,8 @@ on:
     branches:
       - main
   pull_request:
+    paths:
+      - package-lock.json
   merge_group:
   release:
     types: [released]
