--- a/.github/workflows/update-snapshots.yml
+++ b/.github/workflows/update-snapshots.yml
@@ -6,7 +6,7 @@ on:
       - main
   pull_request:
     types: [opened, synchronize, labeled]
-  #  merge_group:
+  merge_group:
   workflow_dispatch:
 
 concurrency:
