--- a/.github/workflows/binding-checks.yml
+++ b/.github/workflows/binding-checks.yml
@@ -69,9 +69,7 @@ jobs:
         uses: ./.github/actions/prepare
 
       - name: Install nightly rust
-        run: |
-          rustup toolchain install nightly
-          rustup component add rustfmt --toolchain nightly
+        run: rustup toolchain install nightly
 
       - name: Install dfx
         if: steps.changes.outputs.src == 'true'
