--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@dfinity/oisy-wallet",
-	"version": "0.23.0",
+	"version": "1.1.0",
 	"private": true,
 	"license": "Apache-2.0",
 	"repository": {
@@ -54,22 +54,24 @@
 		"update:signer": "npm rm @dfinity/oisy-wallet-signer && npm i @dfinity/oisy-wallet-signer",
 		"update:signer:next": "npm rm @dfinity/oisy-wallet-signer && npm i @dfinity/oisy-wallet-signer@next",
 		"update:agent:ic-js": "npm run update:ic-js && npm run update:agent",
-		"update:agent:ic-js:next": "npm run update:ic-js:next && npm run update:agent"
+		"update:agent:ic-js:next": "npm run update:ic-js:next && npm run update:agent",
+		"update:gix-cmp": "npm rm @dfinity/gix-components && npm i @dfinity/gix-components",
+		"update:gix-cmp:next": "npm rm @dfinity/gix-components && npm i @dfinity/gix-components@next"
 	},
 	"dependencies": {
 		"@dfinity/agent": "^2.3.0",
 		"@dfinity/auth-client": "^2.3.0",
 		"@dfinity/candid": "^2.3.0",
-		"@dfinity/ckbtc": "^3.1.7-next-2025-02-10",
-		"@dfinity/cketh": "^3.4.4-next-2025-02-10",
+		"@dfinity/ckbtc": "^3.1.8",
+		"@dfinity/cketh": "^3.4.5",
 		"@dfinity/gix-components": "file:dfinity-gix-components-5.0.0.tgz",
-		"@dfinity/ledger-icp": "^2.6.8-next-2025-02-10",
-		"@dfinity/ledger-icrc": "^2.7.3-next-2025-02-10",
+		"@dfinity/ledger-icp": "^2.6.9",
+		"@dfinity/ledger-icrc": "^2.7.4",
 		"@dfinity/oisy-wallet-signer": "^0.1.6-next-2025-02-17",
 		"@dfinity/principal": "^2.3.0",
-		"@dfinity/utils": "^2.10.0-next-2025-02-10",
+		"@dfinity/utils": "^2.10.1",
 		"@dfinity/verifiable-credentials": "^0.0.4",
-		"@dfinity/zod-schemas": "^0.0.2-next-2025-02-04",
+		"@dfinity/zod-schemas": "^0.0.2",
 		"@junobuild/analytics": "^0.0.31",
 		"@metamask/detect-provider": "^2.0.0",
 		"@solana-program/compute-budget": "^0.6.1",
@@ -88,8 +90,8 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@dfinity/eslint-config-oisy-wallet": "^0.0.6",
-		"@dfinity/ic-management": "^6.0.4-next-2025-02-10",
+		"@dfinity/eslint-config-oisy-wallet": "^0.1.0",
+		"@dfinity/ic-management": "^6.0.5",
 		"@dfinity/identity-secp256k1": "^2.3.0",
 		"@dfinity/internet-identity-playwright": "^0.0.4",
 		"@playwright/test": "^1.49.1",
@@ -98,12 +100,11 @@
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.17.3",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/postcss": "^4.0.0",
-		"@tailwindcss/vite": "^4.0.6",
+		"@tailwindcss/postcss": "^4.0.7",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.7",
 		"@types/dom-view-transitions": "^1.0.5",
-		"@types/node": "^20.14.9",
+		"@types/node": "^22.13.4",
 		"@vitest/coverage-v8": "^3.0.7",
 		"dotenv": "^16.4.7",
 		"fake-indexeddb": "^6.0.0",
@@ -112,14 +113,14 @@
 		"jsqr": "^1.4.0",
 		"pem-file": "^1.0.1",
 		"postcss": "^8.5.1",
-		"prettier": "^3.5.0",
+		"prettier": "^3.5.2",
 		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"sass": "^1.83.4",
 		"svelte": "^5.20.5",
 		"svelte-check": "^4.1.4",
-		"tailwindcss": "^4.0.6",
+		"tailwindcss": "^4.0.7",
 		"tslib": "^2.8.1",
 		"typescript": "^5.4.5",
 		"vite": "^6.2.0",
