--- a/.github/workflows/update-next.yml
+++ b/.github/workflows/update-next.yml
@@ -57,15 +57,15 @@ jobs:
         with:
           token: ${{ steps.app-token.outputs.token }}
           branch: bot-bump-next
-          title: "build(frontend): Bump ${{ inputs.gix_components && 'gix-components' || '' }}${{ inputs.gix_components && inputs.ic_js && ' and ' || '' }}${{ inputs.ic_js && 'ic-js' || '' }}"
+          title: "build(frontend): Bump ${{ inputs.package }}${{ inputs.next && ' to next' || '' }}"
           body: |
             # Motivation
 
-            We want to pull in the latest changes for the ${{ inputs.package }} package.
+            We want to pull in the latest changes for the `${{ inputs.package }}` package.
 
             # Changes
 
-            * Ran `npm run update:${{ inputs.package }}${{ inputs.next && ':next' || '' }}`
+            * Ran `npm run update:${{ env.PKG_NAME }}${{ inputs.next && ':next' || '' }}`
 
             # Tests
 
