--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
 		"update:agent:ic-js:next": "npm run update:ic-js:next && npm run update:agent",
 		"update:gix-cmp": "npm rm @dfinity/gix-components && npm i @dfinity/gix-components",
 		"update:gix-cmp:next": "npm rm @dfinity/gix-components && npm i @dfinity/gix-components@next",
-		"update:oisy-eslint": "npm rm @dfinity/eslint-config-oisy-wallet && npm i @dfinity/eslint-config-oisy-wallet",
-		"update:oisy-eslint:next": "npm rm @dfinity/eslint-config-oisy-wallet && npm i @dfinity/eslint-config-oisy-wallet@next"
+		"update:oisy-eslint": "npm rm @dfinity/eslint-config-oisy-wallet && npm i @dfinity/eslint-config-oisy-wallet -D",
+		"update:oisy-eslint:next": "npm rm @dfinity/eslint-config-oisy-wallet && npm i @dfinity/eslint-config-oisy-wallet@next -D"
 	},
 	"dependencies": {
 		"@dfinity/agent": "^2.3.0",
