--- a/.github/workflows/update-next.yml
+++ b/.github/workflows/update-next.yml
@@ -58,7 +58,7 @@ jobs:
         uses: ./.github/actions/create-pr
         with:
           token: ${{ steps.app-token.outputs.token }}
-          branch: bot-bump-next
+          branch: bot-bump-${{ inputs.package }}${{ inputs.next && '-next' || '' }}
           title: "build(frontend): Bump ${{ inputs.package }}${{ inputs.next && ' to next' || '' }}"
           body: |
             # Motivation
