build: sync and bump dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@dfinity/oisy-wallet",
-	"version": "1.1.0",
+	"version": "1.2.1",
 	"private": true,
 	"license": "Apache-2.0",
 	"repository": {
@@ -20,7 +20,7 @@
 		"build:copy-workers": "node ./scripts/build.copy-workers.mjs",
 		"build:post-process": "npm run build:style && npm run build:metadata && npm run build:ic-domains && npm run build:ii-alternative-origins && npm run build:csp && npm run build:copy-workers && npm run build:compress",
 		"build:tokens-sns": "vite-node scripts/build.tokens.sns.ts && npm run format",
-		"build:tokens-ckerc20": "node scripts/build.tokens.ckerc20.mjs && npm run format",
+		"build:tokens-ckerc20": "vite-node scripts/build.tokens.ckerc20.ts && npm run format",
 		"dev": "vite dev",
 		"build": "tsc --noEmit && vite build && npm run build:post-process",
 		"prepare": "svelte-kit sync",
@@ -50,13 +50,15 @@
 		"erc20:check": "vite-node scripts/check.tokens.erc20.ts",
 		"update:agent": "npm rm @dfinity/{agent,auth-client,candid,principal,identity-secp256k1} && npm i @dfinity/{agent,auth-client,candid,principal} && npm i @dfinity/identity-secp256k1 -D",
 		"update:ic-js": "npm rm @dfinity/{ckbtc,cketh,ic-management,ledger-icp,ledger-icrc,utils,zod-schemas} && npm i @dfinity/{ckbtc,cketh,ledger-icp,ledger-icrc,utils,zod-schemas} && npm i @dfinity/ic-management -D",
-		"update:ic-js:next": "npm rm @dfinity/{ckbtc,cketh,ic-management,ledger-icp,ledger-icrc,utils,zod-schemas} && npm i @dfinity/{ckbtc,cketh,ledger-icp,ledger-icrc,utils,zod-schemas,}@next && npm i @dfinity/ic-management@next -D",
+		"update:ic-js:next": "npm rm @dfinity/{ckbtc,cketh,ic-management,ledger-icp,ledger-icrc,utils,zod-schemas} && npm i @dfinity/{ckbtc,cketh,ledger-icp,ledger-icrc,utils,zod-schemas}@next && npm i @dfinity/ic-management@next -D",
 		"update:signer": "npm rm @dfinity/oisy-wallet-signer && npm i @dfinity/oisy-wallet-signer",
 		"update:signer:next": "npm rm @dfinity/oisy-wallet-signer && npm i @dfinity/oisy-wallet-signer@next",
 		"update:agent:ic-js": "npm run update:ic-js && npm run update:agent",
 		"update:agent:ic-js:next": "npm run update:ic-js:next && npm run update:agent",
 		"update:gix-cmp": "npm rm @dfinity/gix-components && npm i @dfinity/gix-components",
-		"update:gix-cmp:next": "npm rm @dfinity/gix-components && npm i @dfinity/gix-components@next"
+		"update:gix-cmp:next": "npm rm @dfinity/gix-components && npm i @dfinity/gix-components@next",
+		"update:oisy-eslint": "npm rm @dfinity/eslint-config-oisy-wallet && npm i @dfinity/eslint-config-oisy-wallet -D",
+		"update:oisy-eslint:next": "npm rm @dfinity/eslint-config-oisy-wallet && npm i @dfinity/eslint-config-oisy-wallet@next -D"
 	},
 	"dependencies": {
 		"@dfinity/agent": "^2.3.0",
@@ -67,7 +69,7 @@
 		"@dfinity/gix-components": "file:dfinity-gix-components-5.0.0.tgz",
 		"@dfinity/ledger-icp": "^2.6.9",
 		"@dfinity/ledger-icrc": "^2.7.4",
-		"@dfinity/oisy-wallet-signer": "^0.1.6-next-2025-02-17",
+		"@dfinity/oisy-wallet-signer": "^0.1.7",
 		"@dfinity/principal": "^2.3.0",
 		"@dfinity/utils": "^2.10.1",
 		"@dfinity/verifiable-credentials": "^0.0.4",
@@ -90,7 +92,7 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@dfinity/eslint-config-oisy-wallet": "^0.1.0",
+		"@dfinity/eslint-config-oisy-wallet": "file:dfinity-eslint-config-oisy-wallet-0.1.1.tgz",
 		"@dfinity/ic-management": "^6.0.5",
 		"@dfinity/identity-secp256k1": "^2.3.0",
 		"@dfinity/internet-identity-playwright": "^0.0.4",
@@ -98,14 +100,14 @@
 		"@rollup/plugin-inject": "^5.0.5",
 		"@solana/rpc-types": "^2.0.0",
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.17.3",
+		"@sveltejs/kit": "^2.19.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/postcss": "^4.0.7",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.7",
 		"@types/dom-view-transitions": "^1.0.5",
 		"@types/node": "^22.13.4",
-		"@vitest/coverage-v8": "^3.0.7",
+		"@vitest/coverage-v8": "^3.0.8",
 		"dotenv": "^16.4.7",
 		"fake-indexeddb": "^6.0.0",
 		"jimp": "^1.6.0",
@@ -117,15 +119,14 @@
 		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"sass": "^1.83.4",
-		"svelte": "^5.20.5",
+		"sass": "^1.85.1",
+		"svelte": "^5.22.6",
 		"svelte-check": "^4.1.4",
 		"tailwindcss": "^4.0.12",
 		"tslib": "^2.8.1",
 		"typescript": "^5.4.5",
-		"vite": "^6.2.0",
-		"vite-node": "^3.0.7",
-		"vitest": "^3.0.7",
+		"vite": "^6.2.1",
+		"vitest": "^3.0.8",
 		"vitest-mock-extended": "^3.0.1"
 	},
 	"type": "module",
